# Open-SymuVia

./: .gitignore  CMakeLists.txt  README.md
conda/: build.sh  (+2 more)
symucore/: CMakeLists.txt  readme.md
symucore/src/: SymuCoreExports.h
symucore/src/Demand/: DefaultMacroType.cpp  DefaultMacroType.h  DefaultPopulation.cpp  DefaultPopulation.h  Destination.cpp  Destination.h  MacroType.cpp  MacroType.h  Motive.cpp  Motive.h  Origin.cpp  Origin.h  Path.cpp  Path.h  Population.cpp  Population.h  Populations.cpp  Populations.h  PredefinedPath.cpp  PredefinedPath.h  SubPopulation.cpp  SubPopulation.h  Trip.cpp  Trip.h  ValuetedPath.cpp  ValuetedPath.h  VehicleType.cpp  VehicleType.h
symucore/src/Users/: IUserHandler.cpp  IUserHandler.h
symucore/src/Utils/: EmissionUtils.cpp  EmissionUtils.h  Point.cpp  Point.h  RobustTravelIndicatorsHelper.cpp  RobustTravelIndicatorsHelper.h  RobustTravelTimesHelper.cpp  RobustTravelTimesHelper.h  SpatialMarginalsHelper.cpp  SpatialMarginalsHelper.h  SymuCoreConstants.cpp  SymuCoreConstants.h  TravelIndicatorClass.cpp  TravelIndicatorClass.h  TravelTimeClass.cpp  TravelTimeClass.h  TravelTimeUtils.cpp  TravelTimeUtils.h
symumaster/: CMakeLists.txt  SymuMaster.cpp  SymuMaster.h  SymuMasterExports.h
symumaster/IO/: CSVStringUtils.cpp  CSVStringUtils.h  CostsWriting.cpp  CostsWriting.h  DemandFileHandler.cpp  DemandFileHandler.h  NetworkInterfacesFileHandler.cpp  NetworkInterfacesFileHandler.h  PredefinedPathFileHandler.cpp  PredefinedPathFileHandler.h  XMLErrorHandler.cpp  XMLErrorHandler.h  XMLLoader.cpp  XMLLoader.h  XMLStringUtils.cpp  XMLStringUtils.h
symumaster/Launcher/: ColouredConsoleLogger.cpp  ColouredConsoleLogger.h  SymuMasterLauncher.cpp
symumaster/Resources/xsd/: SymuMasterConfig.xsd
symumaster/Simulation/: SimulationRunner.cpp  SimulationRunner.h
symumaster/Simulation/Assignment/: AssignmentModel.cpp  AssignmentModel.h  AssignmentModelFactory.cpp  AssignmentModelFactory.h  HeuristicDualLoop.cpp  HeuristicDualLoop.h  MSADualLoop.cpp  MSADualLoop.h
symumaster/Simulation/Config/: SimulationConfiguration (Copie en conflit de LICIT-AA03683 2018-12-04).cpp  SimulationConfiguration (Copie en conflit de LICIT-AA03683 2018-12-04).h  SimulationConfiguration.cpp  SimulationConfiguration.h  SimulatorConfiguration.cpp  SimulatorConfiguration.h  SimulatorConfigurationFactory.cpp  SimulatorConfigurationFactory.h
symumaster/Simulation/Simulators/: SimulationDescriptor.cpp  SimulationDescriptor.h  SimulatorsInterface.cpp  SimulatorsInterface.h  TraficSimulatorHandler (Copie en conflit de LICIT-AA03683 2018-12-04).cpp  TraficSimulatorHandler (Copie en conflit de LICIT-AA03683 2018-12-04).h  TraficSimulatorHandler.cpp  TraficSimulatorHandler.h  TraficSimulatorHandlerFactory (Copie en conflit de LICIT-AA03683 2018-12-04).cpp  TraficSimulatorHandlerFactory (Copie en conflit de LICIT-AA03683 2018-12-04).h  TraficSimulatorHandlerFactory.cpp  TraficSimulatorHandlerFactory.h  TraficSimulatorInstance.cpp  TraficSimulatorInstance.h  TraficSimulators (Copie en conflit de LICIT-AA03683 2018-12-04).cpp  TraficSimulators (Copie en conflit de LICIT-AA03683 2018-12-04).h  TraficSimulators.cpp  TraficSimulators.h
symumaster/Simulation/Users/: PPath.cpp  PPath.h  TrackedUser.cpp  TrackedUser.h  UserEngine.cpp  UserEngine.h  UserEngineSnapshot.cpp  UserEngineSnapshot.h  UserEngines.cpp  UserEngines.h  UserPathWriting.cpp  UserPathWriting.h  UserPathWritings.cpp  UserPathWritings.h
symumaster/Utils/: ContainerForPopulationOriginDestination.h  SymuMasterConstants.cpp  SymuMasterConstants.h  SystemUtils.cpp  SystemUtils.h
symuvia/: CMakeLists.txt
symuvia/config/: reseau.xsd
symuvia/src/: Affectation.cpp  Affectation.h  AffectationSave.cpp  AffectationSave.h  ArretPublicTransportPenalty.cpp  ArretPublicTransportPenalty.h  BriqueDeConnexion.cpp  BriqueDeConnexion.h  CMakeLists.txt  CSVOutputWriter.cpp  CSVOutputWriter.h  CarrefourAFeux.cpp  CarrefourAFeux.h  CarrefourAFeuxEx.cpp  CarrefourAFeuxEx.h  Connection.cpp  Connection.h  ConnectionDrivingPenalty.cpp  ConnectionDrivingPenalty.h  ConnectionPonctuel.cpp  ConnectionPonctuel.h  ControlZone.cpp  ControlZone.h  ControleurDeFeux.cpp  ControleurDeFeux.h  DLL_TrafficState.h  DiagFonda.cpp  DiagFonda.h  DocAcoustique.cpp  DocAcoustique.h  DocTrafic.cpp  DocTrafic.h  EVEDocAcoustique.cpp  EVEDocAcoustique.h  EVEDocTrafic.cpp  EVEDocTrafic.h  GMLDocTrafic.cpp  GMLDocTrafic.h  GTFSExporter.cpp  GTFSExporter.h  (+152 more)
symuvia/src/ITS/: ITSScriptableElement.cpp  ITSScriptableElement.h  SymuComSerialization.cpp  SymuComSerialization.h
symuvia/src/Xerces/: DOMDocumentSymuvia.cpp  DOMDocumentSymuvia.h  DOMLSSerializerSymu.cpp  DOMLSSerializerSymu.hpp  MemoryManagerSymuvia.cpp  MemoryManagerSymuvia.hpp  XMLReaderSymuvia.cpp  XMLReaderSymuvia.h  XMLUtil.cpp  XMLUtil.h  XercesString.cpp  XercesString.h
symuvia/src/carFollowing/: AbstractCarFollowing.cpp  AbstractCarFollowing.h  CarFollowingContext.cpp  CarFollowingContext.h  CarFollowingFactory.cpp  CarFollowingFactory.h  GippsCarFollowing.cpp  GippsCarFollowing.h  IDMCarFollowing.cpp  IDMCarFollowing.h  NewellCarFollowing.cpp  NewellCarFollowing.h  NewellContext.cpp  NewellContext.h  ScriptedCarFollowing.cpp  ScriptedCarFollowing.h
symuvia/src/cryptage/: Cryptage3DES.cpp  Cryptage3DES.h  tdes.c  tdes.h  tdesmain.h
symuvia/src/launcher/: SymuViaLauncher.cpp
symuvia/src/regulation/: PythonUtils.cpp  PythonUtils.h  RegulationAction.cpp  RegulationAction.h  RegulationBrique.cpp  RegulationBrique.h  RegulationCapteur.cpp  RegulationCapteur.h  RegulationCondition.cpp  RegulationCondition.h  RegulationElement.cpp  RegulationElement.h  RegulationModule.cpp  RegulationModule.h  RegulationRestitution.cpp  RegulationRestitution.h
symuvia/src/sensors/: AbstractSensor.cpp  AbstractSensor.h  BlueToothSensor.cpp  BlueToothSensor.h  EdieSensor.cpp  EdieSensor.h  GlobalSensor.cpp  GlobalSensor.h  LongitudinalSensor.cpp  LongitudinalSensor.h  MFDSensor.cpp  MFDSensor.h  PonctualSensor.cpp  PonctualSensor.h  SensorsManager.cpp  SensorsManager.h  TankSensor.cpp  TankSensor.h
(+180 files in other folders)
